demo10-circleci/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: http-server-demo-service
spec:
  selector:
    app: http-server-demo
  ports:
    - port: 8080
