demo10-circleci/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-server-demo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: http-server-demo-service
              servicePort: 8080
